k3s/apps/intranet/kadmin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      component: kadmin
  template:
    metadata:
      labels:
        component: kadmin
    spec:
      containers:
        - name: kadmin
          image: registry.cri.epita.fr/cri/docker/kerberos/master
          ports:
            - name: kpasswd
              containerPort: 464
            - name: kadmin
              containerPort: 749
          volumeMounts:
            - name: kerberos-adm-secret
              mountPath: /etc/kerberos-secrets
      volumes:
        - name: kerberos-adm-secret
          secret:
            secretName: kerberos-adm-secret
---
apiVersion: v1
kind: Service
metadata:
  name: kadmin
spec:
  type: ClusterIP
  selector:
    component: kadmin
  ports:
    - name: kpasswd
      port: 464
      targetPort: 464
    - name: kadmin
      port: 749
      targetPort: 749
---
apiVersion: v1
kind: Service
metadata:
  name: kadmin-public-lb-tcp
  annotations:
    metallb.universe.tf/address-pool: "public"
    metallb.universe.tf/allow-shared-ip: 148.251.148.237
spec:
  selector:
    component: kadmin
  loadBalancerIP: 148.251.148.237
  ports:
    - name: kpasswd
      protocol: TCP
      port: 464
      targetPort: 464
    - name: kadmin
      protocol: TCP
      port: 749
      targetPort: 749
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: kadmin-public-lb-udp
  annotations:
    metallb.universe.tf/address-pool: "public"
    metallb.universe.tf/allow-shared-ip: 148.251.148.237
spec:
  selector:
    component: kadmin
  loadBalancerIP: 148.251.148.237
  ports:
    - name: kpasswd
      protocol: UDP
      port: 464
      targetPort: 464
    - name: kadmin
      protocol: UDP
      port: 749
      targetPort: 749
  type: LoadBalancer
