k3s/apps/intranet/kdc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kdc
spec:
  replicas: 1
  selector:
    matchLabels:
      component: kdc
  template:
    metadata:
      labels:
        component: kdc
    spec:
      containers:
        - name: kdc
          image: registry.cri.epita.fr/cri/docker/kerberos/master
          ports:
            - name: kdc
              containerPort: 88
          volumeMounts:
            - name: kerberos-kdc-secret
              mountPath: /etc/kerberos-secrets
      volumes:
        - name: kerberos-kdc-secret
          secret:
            secretName: kerberos-kdc-secret
---
apiVersion: v1
kind: Service
metadata:
  name: kdc
spec:
  type: ClusterIP
  selector:
    component: kdc
  ports:
    - name: kdc
      port: 88
      targetPort: 88
---
apiVersion: v1
kind: Service
metadata:
  name: kdc-public-lb-tcp
  annotations:
    metallb.universe.tf/address-pool: "public"
    metallb.universe.tf/allow-shared-ip: 148.251.148.237
spec:
  selector:
    component: kdc
  loadBalancerIP: 148.251.148.237
  ports:
    - name: kdc
      protocol: TCP
      port: 88
      targetPort: 88
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: kdc-public-lb-udp
  annotations:
    metallb.universe.tf/address-pool: "public"
    metallb.universe.tf/allow-shared-ip: 148.251.148.237
spec:
  selector:
    component: kdc
  loadBalancerIP: 148.251.148.237
  ports:
    - name: kdc
      protocol: UDP
      port: 88
      targetPort: 88
  type: LoadBalancer
