k3s/apps/intranet/ldap.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ldap
spec:
  serviceName: openldap-headless
  replicas: 1
  selector:
    matchLabels:
      component: ldap
  template:
    metadata:
      labels:
        component: ldap
    spec:
      containers:
        - name: openldap
          image: registry.cri.epita.fr/cri/docker/ldap/master
          ports:
            - name: openldap-ldap
              containerPort: 389
            - name: openldap-ldaps
              containerPort: 636
          volumeMounts:
            - name: ldap-config
              mountPath: /etc/ldap/slapd.d
            - name: ldap-data
              mountPath: /var/lib/ldap
            - name: ldap-keytab
              mountPath: /etc/ldap-keytab
            - name: sasl
              mountPath: /var/run/saslauthd
            - name: ldap-tls
              mountPath: /container/service/slapd/assets/certs
        - name: sasl
          image: registry.cri.epita.fr/cri/docker/ldap/master
          args:
            - /usr/sbin/saslauthd
            - -d
            - -a
            - kerberos5
          volumeMounts:
            - name: ldap-config
              mountPath: /etc/ldap/slapd.d
            - name: ldap-keytab
              mountPath: /etc/ldap-keytab
            - name: sasl
              mountPath: /var/run/saslauthd
      volumes:
        - name: ldap-keytab
          secret:
            secretName: ldap-keytab
        - name: ldap-tls
          secret:
            secretName: ldap-tls
            defaultMode: 0444
        - name: ldap-data
          persistentVolumeClaim:
            claimName: ldap-data
        - name: ldap-config
          persistentVolumeClaim:
            claimName: ldap-config
        - name: sasl
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: openldap-headless
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    component: ldap
  ports:
    - name: openldap-ldap
      port: 389
      targetPort: 389
    - name: openldap-ldaps
      port: 636
      targetPort: 636
---
apiVersion: v1
kind: Service
metadata:
  name: openldap
spec:
  type: ClusterIP
  selector:
    component: ldap
  ports:
    - name: openldap-ldap
      port: 389
      targetPort: 389
    - name: openldap-ldaps
      port: 636
      targetPort: 636
---
apiVersion: v1
kind: Service
metadata:
  name: ldap-lb
  annotations:
    metallb.universe.tf/address-pool: "private"
    metallb.universe.tf/allow-shared-ip: 172.28.8.150
spec:
  selector:
    component: ldap
  loadBalancerIP: 172.28.8.150
  ports:
    - name: openldap-ldap
      port: 389
      targetPort: 389
    - name: openldap-ldaps
      port: 636
      targetPort: 636
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: ldap-public-lb
  annotations:
    metallb.universe.tf/address-pool: "public"
    metallb.universe.tf/allow-shared-ip: 148.251.148.237
spec:
  selector:
    component: ldap
  loadBalancerIP: 148.251.148.237
  ports:
    - name: openldap-ldap
      port: 389
      targetPort: 389
    - name: openldap-ldaps
      port: 636
      targetPort: 636
  type: LoadBalancer
